--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 RUN_ADDRESS=localhost:8080
 DATABASE_URI=postgres://user:hackme@localhost:5432/gophermart?sslmode=disable
-ACCRUAL_SYSTEM_ADDRESS=
+ACCRUAL_SYSTEM_ADDRESS=http://127.0.0.1:3000
 AUTH_SECRET=secret
 
 POSTGRES_DB=gophermart
